--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -32,14 +32,12 @@
             <a th:href="@{/auth/listOrg}">Users</a>
         </div>
     </main>
-
     <aside>
         <nav>
             <div class="input">
                 <div>
                     <i class="fas fa-search"></i>
                 </div>
-
                 <label>
                     <input type="text" placeholder="Search">
                 </label>
@@ -50,9 +48,8 @@
                     <img src="assets/imges/bell.png" alt="">
                     <i class="far fa-envelope"></i>
                 </div>
-
                 <div class="user">
-                    <img src="./assets/imges/useer.png" alt="">
+                    <img src="./assets/imges/users.png" alt="">
                     <p>Azhar I.
                         <i class="fas fa-angle-down"></i>
                     </p>
