--- a/src/main/resources/templates/auth/create_admin.html
+++ b/src/main/resources/templates/auth/create_admin.html
@@ -36,7 +36,7 @@
             </label>
 
             <label>
-                <input type="hidden" th:value="Admin" name="role_name">
+                <input type="hidden" th:value="ADMIN" name="role_name">
             </label>
 
             <label>
