--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,15 +16,34 @@
 </head>
 <body>
 <header>
-    <main>
+    <main id="index-main-page">
         <div class="menu-bar">
             <i class="fas fa-bars"></i>
         </div>
+
         <div class="logo">
-            <img src="./assets/imges/logo.png" alt="">
+            <img src="../static/imges/logo.png" width="166" th:src="@{imges/logo.png}"/>
         </div>
 
-        <div class="link">
+        <div class="link" sec:authorize="hasRole('ADMIN')">
+            <a th:href="@{/project/list}">Projects</a>
+            <a th:href="@{/auth/listOrg}">Users</a>
+        </div>
+
+        <div class="link" sec:authorize="hasRole('SUPER')">
+            <a th:href="@{/organization/list}">Organizations</a>
+            <a th:href="@{/auth/list}">Users</a>
+        </div>
+
+        <div class="link" sec:authorize="isAnonymous()">
+            <a th:href="@{/auth/login}">Login</a>
+        </div>
+
+        <label class="link" sec:authorize="isAuthenticated()">
+            <a th:href="@{/auth/login}">Logout</a>
+        </label>
+
+        <div class="link" sec:authorize="hasAnyRole('ADMIN','EMPLOYEE')">
             <a href="#"> -- Clients
             </a>
             <a href="#">Task manager</a>
@@ -42,19 +62,21 @@
                 <label>
                     <input type="text" placeholder="Search">
                 </label>
+
             </div>
 
             <div class="user-information">
                 <div class="icon">
-                    <img src="assets/imges/bell.png" alt="">
+                    <img src="../static/imges/bell.png" width="33" th:src="@{imges/bell.png}"/>
                     <i class="far fa-envelope"></i>
                 </div>
 
                 <div class="user">
-                    <img src="../assets/imges/useer.png" alt="">
+
+                    <img src="../static/imges/useer.png" width="56" th:src="@{imges/useer.png}"/>
                     <details>
                         <summary>Saidjalol Qodirov.</summary>
-                        <a th:href="@{/auth/logout}">Logout</a>
+
                     </details>
                 </div>
 
@@ -74,13 +96,13 @@
                         <p>ОсОО “Energi.kg”</p>
                         <div class="box-text">
                                     <span>
-                                        <img src="./assets/imges/sunrise.png" alt="">12/04/2021
+                                        <img src="../static/imges/sunrise.png" alt="">12/04/2021
                                     </span>
                             <span>
-                                        <img src="./assets/imges/sunset2.png" alt=""> 12/04/2021
+                                        <img src="../static/imges/sunset2.png" alt=""> 12/04/2021
                                     </span>
                             <span>
-                                       <img src="./assets/imges/users.png" alt=""> Adyl, Azhar, Arthur
+                                       <img src="../static/imges/users.png" alt=""> Adyl, Azhar, Arthur
                                     </span>
                         </div>
                     </div>
@@ -88,13 +110,13 @@
                         <p>ОсОО “Energi.kg”</p>
                         <div class="box-text">
                                     <span>
-                                        <img src="./assets/imges/sunrise.png" alt="">12/04/2021
+                                        <img src="../static/imges/sunrise.png" alt="">12/04/2021
                                     </span>
                             <span>
-                                        <img src="./assets/imges/sunset2.png" alt=""> 12/04/2021
+                                        <img src="../static/imges/sunset2.png" alt=""> 12/04/2021
                                     </span>
                             <span>
-                                       <img src="./assets/imges/users.png" alt=""> Adyl, Azhar, Arthur
+                                       <img src="../static/imges/users.png" alt=""> Adyl, Azhar, Arthur
                                     </span>
                         </div>
                     </div>
@@ -102,13 +124,13 @@
                         <p>ОсОО “Energi.kg”</p>
                         <div class="box-text">
                                     <span>
-                                        <img src="./assets/imges/sunrise.png" alt="">12/04/2021
+                                        <img src="../static/imges/sunrise.png" alt="">12/04/2021
                                     </span>
                             <span>
-                                        <img src="./assets/imges/sunset2.png" alt=""> 12/04/2021
+                                        <img src="../static/imges/sunset2.png" alt=""> 12/04/2021
                                     </span>
                             <span>
-                                       <img src="./assets/imges/users.png" alt=""> Adyl, Azhar, Arthur
+                                       <img src="../static/imges/users.png" alt=""> Adyl, Azhar, Arthur
                                     </span>
                         </div>
                     </div>
@@ -123,7 +145,7 @@
                         <div class="box-text">
                             <p>ОсОО “Energi.kg”</p>
                             <span>
-                                        <img src="./assets/imges/sunrise.png" alt="">12/04/2021
+                                        <img src="../static/imges/sunrise.png" alt="">12/04/2021
                                     </span>
                         </div>
 
@@ -133,7 +155,7 @@
 
                         <div class="box-text">
                             <p>ОсОО “Energi.kg”</p>
-                            <span><img src="./assets/imges/sunrise.png" alt="">12/04/2021</span>
+                            <span><img src="../static/imges/sunrise.png" alt="">12/04/2021</span>
                         </div>
 
                     </div>
@@ -143,7 +165,7 @@
                         <div class="box-text">
                             <p>ОсОО “Energi.kg”</p>
                             <span>
-                                        <img src="./assets/imges/sunrise.png" alt="">12/04/2021
+                                        <img src="../static/imges/sunrise.png" alt="">12/04/2021
                                     </span>
                         </div>
 
