--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -19,7 +19,7 @@
             <i class="fas fa-bars"></i>
         </div>
         <div class="logo">
-            <img src="./assets/imges/logo.png" alt="">
+            <img src="../static/imges/logo.png" alt="">
         </div>
 
         <div class="link">
@@ -43,12 +43,12 @@
 
             <div class="user-information">
                 <div class="icon">
-                    <img src="./assets/imges/bell.png" alt="">
+                    <img src="../static/imges/bell.png" alt="">
                     <i class="far fa-envelope"></i>
                 </div>
 
                 <div class="user">
-                    <img src="./assets/imges/useer.png" alt="">
+                    <img src="../static/imges/useer.png" alt="">
                     <p>Azhar I.
                         <i class="fas fa-angle-down"></i>
                     </p>
@@ -83,7 +83,7 @@
                     <div class="todoContent-box">
                         <div class="todo-img">
                             <p>To do</p>
-                            <img src="./assets/imges/plus-circle.png" alt="">
+                            <img src="../static/imges/plus-circle.png" alt="">
                         </div>
                         <div class="todo-box">
                             <h4>CRM system design
