--- a/src/main/resources/templates/index3.html
+++ b/src/main/resources/templates/index3.html
@@ -19,7 +19,7 @@
             <i class="fas fa-bars"></i>
         </div>
         <div class="logo">
-            <img src="./assets/imges/logo.png" alt="">
+            <img src="../static/imges/logo.png" alt="">
         </div>
 
         <div class="link">
@@ -45,12 +45,12 @@
 
             <div class="user-information">
                 <div class="icon">
-                    <img src="./assets/imges/bell.png" alt="">
+                    <img src="../static/imges/bell.png" alt="">
                     <i class="far fa-envelope"></i>
                 </div>
 
                 <div class="user">
-                    <img src="./assets/imges/useer.png" alt="">
+                    <img src="../static/imges/useer.png" alt="">
                     <p>Username
                         <i class="fas fa-angle-down"></i>
                     </p>
@@ -70,7 +70,7 @@
                         <p><b>Activity: </b>12/04/2021, 6:37 p.m </p>
                         <p>Приступил(-а) к задаче</p>
                         <span>
-                                <img src="./assets/imges/Ellipse.png" alt="">Azhar
+                                <img src="../static/imges/Ellipse.png" alt="">Azhar
                             </span>
                     </div>
 
@@ -79,7 +79,7 @@
                         <p><b>Activity: </b>12/04/2021, 6:37 p.m </p>
                         <p>Приступил(-а) к задаче</p>
                         <span>
-                                <img src="./assets/imges/Ellipse.png" alt="">Azhar
+                                <img src="../static/imges/Ellipse.png" alt="">Azhar
                             </span>
                     </div>
 
@@ -88,7 +88,7 @@
                         <p><b>Activity: </b>12/04/2021, 6:37 p.m </p>
                         <p>Приступил(-а) к задаче</p>
                         <span>
-                                <img src="./assets/imges/Ellipse.png" alt="">Azhar
+                                <img src="../static/imges/Ellipse.png" alt="">Azhar
                             </span>
                     </div>
 
@@ -97,7 +97,7 @@
                         <p><b>Activity: </b>12/04/2021, 6:37 p.m </p>
                         <p>Приступил(-а) к задаче</p>
                         <span>
-                                <img src="./assets/imges/Ellipse.png" alt="">Azhar
+                                <img src="../static/imges/Ellipse.png" alt="">Azhar
                             </span>
                     </div>
 
@@ -106,7 +106,7 @@
                         <p><b>Activity: </b>12/04/2021, 6:37 p.m </p>
                         <p>Приступил(-а) к задаче</p>
                         <span>
-                                <img src="./assets/imges/Ellipse.png" alt="">Azhar
+                                <img src="../static/imges/Ellipse.png" alt="">Azhar
                             </span>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
 
                     <div class="content-box">
                         <div class="flex">
-                            <p class="box-text"><img src="./assets/imges/avatar.png" alt="">Artur </p>
+                            <p class="box-text"><img src="../static/imges/avatar.png" alt="">Artur </p>
                             <p>12/04/2021, 6:37 p.m</p>
                         </div>
 
@@ -160,23 +160,23 @@
 
                     <div class="btn">
                         <button type="submit">Change the priority
-                            <img src="./assets/imges/down.png" alt="">
+                            <img src="../static/imges/down.png" alt="">
                         </button>
 
                         <button type="submit">Change the priority
-                            <img src="./assets/imges/down.png" alt="">
+                            <img src="../static/imges/down.png" alt="">
                         </button>
 
                         <button type="submit">
-                            <img src="./assets/imges/usercheck.png" alt="">Become a participant
+                            <img src="../static/imges/usercheck.png" alt="">Become a participant
                         </button>
 
                         <button type="submit">
-                            <img src="./assets/imges/ion_snow.png" alt="">Freeze the task
+                            <img src="../static/imges/ion_snow.png" alt="">Freeze the task
                         </button>
 
                         <button type="submit">
-                            <img src="./assets/imges/check.png" alt="">Close task
+                            <img src="../static/imges/check.png" alt="">Close task
                         </button>
                     </div>
                 </div>
