--- a/src/main/resources/templates/auth/detail.html
+++ b/src/main/resources/templates/auth/detail.html
@@ -1,73 +1,97 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="fragment.html :: header('Organization Delete Page')">
-</head>
-<body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="">
 
-<main>
-    <nav th:include="index.html::#index-nav"></nav>
-    <h1>Detail User Page</h1>
-    <div class="container">
-        <div class="row">
-            <main>
-                <img src="../../static/imges/logo.png" alt="not found">
-            </main>
-            <div class="col-4 mx-auto">
-                <ul>
-                    <li th:text="${user.username}"></li>
-                    <li th:text="${user.email}"></li>
-                    <li th:text="${user.id}"></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</main>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index html one</title>
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&family=Red+Hat+Display&family=Rubik:wght@400;500;600;700&display=swap"
+          rel="stylesheet">
+</head>
+
+<style>
+    ul {
+        list-style-type: square;
+    }
+</style>
+
+<body class="myb">
+
 
 <header>
-    <main th:include="index.html::#index-main-page"></main>
+
+    <main>
+        <div class="menu-bar">
+            <i class="fas fa-bars"></i>
+        </div>
+
+        <div class="logo">
+            <img src="https://github.com/qodirovsaidjalol/group-one/blob/8529d96f2194c415f51de795df68064c97a579f1/src/main/resources/static/imges/logo.png"
+                 width="166" th:src="@{/imges/logo.png}" alt="not"/>
+        </div>
+
+    </main>
 
     <aside>
-        <nav th:include="index.html::#index-nav"></nav>
+
+        <nav id="index-nav">
+            <div class="input">
+                <div>
+                    <i class="fas fa-search"></i>
+                </div>
+
+                <label>
+                    <input type="text" placeholder="Search">
+                </label>
+
+            </div>
+
+            <div class="user-information">
+                <div class="icon">
+                    <img src="https://github.com/qodirovsaidjalol/group-one/blob/8529d96f2194c415f51de795df68064c97a579f1/src/main/resources/static/imges/bell.png"
+                         width="33" th:src="@{/imges/bell.png}" alt=""/>
+                    <i class="far fa-envelope"></i>
+                </div>
+
+                <div class="user">
+
+                    <img src="https://yt3.ggpht.com/ytc/AAUvwngn8SLWqd9pJjSKeeKWjpKzYA0imRDlQbi6yWf8=s900-c-k-c0x00ffffff-no-rj"
+                         width="56" alt="not">
+                    <details>
+                        <summary>Saidjalol Qodirov.</summary>
+
+                    </details>
+                </div>
+
+            </div>
+
+        </nav>
 
         <div class="container">
             <div class="row">
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Detail</th>
-                        <th>Action</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="user,iter : ${users}">
-                        <td th:text="${iter.count}"></td>
-
-                        <td th:utext=" ${user.getEmail()}"></td>
-                        <td>
-                            <a th:href="@{/auth/detail/{id}/(id=${user.id})}">Details</a>
-
-                        </td>
-                        <td>
-
-                            <div th:switch="${user.isBlocked()}">
-                                <p th:case="${true}">
-                                </p>
-                                <p th:case="${false}">
-                                </p>
-                            </div>
-
-                            <a th:href="@{/auth/unblock/{id}/(id=${user.id})}">🔓</a>
-                            <a th:href="@{/auth/block/{id}/(id=${user.id})}">🔐</a>
-                            <a th:href="@{/auth/delete/{id}/(id=${user.id})}">🗑</a>
-                            <!--                    <a th:href="@{/auth/update/{id}/(id=${user.id})}"> ✏ </a>-->
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-                <a th:href="@{/auth/create}" class="btn btn-success">➕ Add</a>
+                <div class="col-4 mx-auto">
+                    <div>
+                        <img th:src="${user.getImage()}" alt="not found" src="">
+                        <ul>
+                            <li><h1>About User</h1></li>
+                            <li class="h4" th:text="${user.username}"></li>
+                            <li class="h4" th:text="${user.email}"></li>
+                            <li class="h4" th:text="${user.role}"></li>
+                            <li class="h4" th:text="${user.language}"></li>
+                            <ul>
+                                <li><b>Projects</b></li>
+                                <li>Project 1</li>
+                                <li>Project 2</li>
+                                <li>Project 3</li>
+                            </ul>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -75,8 +99,5 @@
 
 </header>
 
-<footer>
-    <section th:include="fragment.html :: js-files"></section>
-</footer>
 </body>
 </html>
