--- a/src/main/resources/templates/organization/create.html
+++ b/src/main/resources/templates/organization/create.html
@@ -1,50 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>register</title>
-
-    <link rel="stylesheet" th:href="@{/css/register.css}">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&family=Red+Hat+Display&display=swap"
-            rel="stylesheet">
+    <meta
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+            name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <title>Thymeleaf Form handling Demo</title>
+    <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css"
+          rel="stylesheet">
 </head>
-<body>
 
-<div class="container">
-    <div class="login-text">
-        <h3>Create Organization</h3>
+<body class="container">
+
+<form class="col card p-3 my-5" method="post" enctype="multipart/form-data" th:action="@{/organization/create}"
+      th:object="${organization}">
+    <div class="form-group">
+        <label for="firstName">Name</label>
+        <input class="form-control" id="firstName" placeholder="Enter Organization Name" required autocomplete="off"
+               th:field="*{name}"
+               type="text"/>
     </div>
 
-    <div class="login-input">
-        <form th:action="@{/organization/create}" method="post" enctype="multipart/form-data">
-            <label>
-                <input type="text" placeholder="Enter organization name" name="name">
-            </label>
-
-            <label>
-                <input type="text" placeholder="Enter organization Code" name="code">
-            </label>
-
-            <label>
-                <input type="text" placeholder="Enter organization Email" name="email">
-            </label>
-
-            <label>
-                <input type="file" id="image_uploads" placeholder="Enter organization logo" name="logo"
-                       accept=".jpg, .jpeg, .png, .img" multiple/>
-            </label>
-
-            <div class="login-button">
-                <button type="submit">➕ Save</button>
-            </div>
-        </form>
+    <div class="form-group">
+        <label for="code">Code</label>
+        <input class="form-control" id="code" placeholder="Enter Organization code" required autocomplete="off"
+               th:field="*{code}"
+               type="text"/>
     </div>
-</div>
+
+    <div class="form-group">
+        <label for="email">Email</label>
+        <input class="form-control" id="email" placeholder="Enter email" required autocomplete="off"
+               th:field="*{email}"
+               type="text"/>
+    </div>
+
+    <div class="form-group">
+        <label for="image">Profile Image</label>
+        <input class="form-control" type="file" id="image" placeholder="Enter image"
+               th:field="*{logo}" accept=".jpg, .jpeg, .png, .img" multiple/>
+    </div>
+
+    <div>
+        <input class="btn btn-primary" type="submit" value="Create User">
+    </div>
+</form>
+
 </body>
+
 </html>
