--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -2,7 +2,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="fragment.html :: header('Home Page')"></head>
 <body class="myb">
-<H1>salom</H1>
 <section th:include="fragment.html :: navbar"></section>
 
 
@@ -32,12 +31,12 @@
 <!--                    <span style="color: red" th:errors="*{project}"></span>-->
                 </div>
                 <div class="form-group">
-                    <label for="columnId" class="form-label">Description</label>
+                    <label for="columnId" class="form-label">Column</label>
                     <input class="form-control" type="text" id="columnId" name="columnId" /> <!--th:field="*{column}"-->
 <!--                    <span style="color: red" th:errors="*{column}"></span>-->
                 </div>
                 <div class="form-group">
-                    <label for="level" class="form-label">Description</label>
+                    <label for="level" class="form-label">Level</label>
                     <input class="form-control" type="text" id="level" name="level" /> <!--th:field="*{level}"-->
 <!--                    <span style="color: red" th:errors="*{level}"></span>-->
                 </div>
