--- a/src/main/resources/templates/task/update.html
+++ b/src/main/resources/templates/task/update.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="form-group">
                     <label for="columnId" class="form-label">ColumnId</label>
-                    <input class="form-control" type="text" id="columnId" name="columnId" th:value="${task.getColumnId()}"/> <!--th:field="*{column}"-->
+                    <input class="form-control" type="text" id="columnId" name="columnId" th:value="${task.getColumn().getId()}"/> <!--th:field="*{column}"-->
                     <!--                    <span style="color: red" th:errors="*{column}"></span>-->
                 </div>
                 <div class="form-group">
