--- a/src/main/resources/templates/auth/list.html
+++ b/src/main/resources/templates/auth/list.html
@@ -8,9 +8,6 @@
             name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Thymeleaf Form handling Demo</title>
-    <!--    <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css"-->
-    <!--          rel="stylesheet">-->
-
 
     <link rel="stylesheet" th:href="@{/css/index.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -66,10 +63,7 @@
 
         <div class="link">
             <a th:href="@{/}"> -- Admin Page</a>
-            <a th:href="@{/}">List all projects</a>
-            <a th:href="@{/auth/list}">users</a>
-            <a th:href="@{/auth/create}">Create user</a>
-            <a th:href="@{/}">Create project</a>
+            <br>
             <a href="#">Logout</a>
         </div>
     </main>
@@ -109,38 +103,42 @@
         </nav>
 
         <br><br>
+        <div>
+            <table id="customers" class="table table-striped table-bordered">
+                <tr>
+                    <th>#</th>
+                    <th>Username</th>
+                    <th>Role</th>
+                    <th>Detail</th>
+                    <th>Actions</th>
+                </tr>
+                <tr th:if="${#lists.isEmpty(users)}">
+                    <td class="text-center" colspan="7">No Records found. Add some...!</td>
+                </tr>
+                <tr th:each="user, iter : ${users}">
+                    <td class="align-middle" th:text="${iter.count}"></td>
+                    <a th:href="'/auth/detail/' + ${user.id}">
+                        <td class="align-middle" th:text="${user.username}"></td>
+                    </a>
+                    <td class="align-middle" th:text="${user.role}"></td>
+                    <td class="align-middle"><a th:href="'/auth/detail/'+${user.id}">About <i
+                            th:text="${user.username}"></i></a></td>
 
-        <table id="customers" class="table table-striped table-bordered">
-            <tr>
-                <th>#</th>
-                <th>Username</th>
-                <th>Role</th>
-                <th>Detail</th>
-                <th>Actions</th>
-            </tr>
-            <tr th:if="${#lists.isEmpty(users)}">
-                <td class="text-center" colspan="7">No Records found. Add some...!</td>
-            </tr>
-            <tr th:each="user, iter : ${users}">
-                <td class="align-middle" th:text="${iter.count}"></td>
-                <a th:href="'/auth/detail/' + ${user.id}">
-                    <td class="align-middle" th:text="${user.username}"></td>
-                </a>
-                <td class="align-middle" th:text="${user.role}"></td>
-                <td class="align-middle"><a th:href="'/auth/detail/'+${user.id}">About <i
-                        th:text="${user.username}"></i></a></td>
-
-                <td class="align-middle text-center">
-                    <a class="btn btn-secondary" th:href="'/auth/update/' + ${user.id}">✏️</a>
-                    <a class="btn btn-secondary" th:if="${user.isBlocked()}"
-                       th:href="'/auth/block/' + ${user.id}">🔓</a>
-                    <a class="btn btn-secondary" th:if="${!user.isBlocked()}"
-                       th:href="'/auth/block/' + ${user.id}">🔐</a>
-                    <a class="btn btn-secondary" th:href="'/auth/delete/' + ${user.id}">🗑</a>
-                </td>
-            </tr>
-        </table>
-
+                    <td class="align-middle text-center">
+                        <a class="btn btn-secondary" th:href="'/auth/update/' + ${user.id}">✏️</a>
+                        <a class="btn btn-secondary" th:if="${user.isBlocked()}"
+                           th:href="'/auth/block/' + ${user.id}">🔓</a>
+                        <a class="btn btn-secondary" th:if="${!user.isBlocked()}"
+                           th:href="'/auth/block/' + ${user.id}">🔐</a>
+                        <a class="btn btn-secondary" th:href="'/auth/delete/' + ${user.id}">🗑</a>
+                    </td>
+                </tr>
+            </table>
+            <br>
+            <h3>
+                <a style="padding: 20px" th:href="@{/auth/create}" class="btn btn-success">➕ Create User</a>
+            </h3>
+        </div>
     </aside>
 
 </header>
