--- a/src/main/resources/templates/organization/detail.html
+++ b/src/main/resources/templates/organization/detail.html
@@ -80,7 +80,7 @@
             <div class="row">
                 <div class="col-4 mx-auto">
                     <div>
-                        <img th:src="${organization.getLogo()}" alt="not found" src="">
+                        <img th:src="@{${organization.logo}}" alt="not found" src="">
                         <ul>
                             <li><h1>About Organization</h1></li>
                             <li class="h4"> Organization name => <b th:text="${organization.name}"></b></li>
