--- a/src/main/resources/templates/colum/list.html
+++ b/src/main/resources/templates/colum/list.html
@@ -20,6 +20,7 @@
                 <td>✅
                     <a th:href="@{/colum/delete/{id}/(id=${colum.id})}">🗑</a>
                     <a th:href="@{/colum/create/{id}/(id=${colum.id})}"> ✏ </a>
+                    <a th:href="@{/task/list/{id}/(id=${colum.id})}"> 🧾 </a>
                 </td>
             </tr>
             </tbody>
