--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -1,53 +1,148 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="fragment.html :: header('Home Page')"></head>
-<body class="myb">
-<section th:include="fragment.html :: navbar"></section>
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+<style type="text/css">
+    .form-style-8 {
+        font-family: 'Open Sans Condensed', arial, sans, serif;
+        width: 500px;
+        padding: 30px;
+        background: #FFFFFF;
+        margin: 50px auto;
+        box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.22);
+        -moz-box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.22);
+        -webkit-box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.22);
+
+    }
 
 
-<div class="container">
-    <div class="row">
-        <div class="col-6 mx-auto">
-            <form th:action="@{/task/create}" th:method="post" th:object="${dto}">
-                <div class="form-group">
-                    <label for="name" class="form-label">Enter name</label>
-                    <input class="form-control" type="text" id="name" name="name"  /> <!--th:field="*{name}"-->
-<!--                    <span style="color: red" th:errors="*{name}"></span>-->
-                </div>
-                <div class="form-group">
-                    <label for="description" class="form-label">Description</label>
-                    <input class="form-control" type="text" id="description" name="description" /> <!--th:field="*{description}"-->
-<!--                    <span style="color: red" th:errors="*{description}"></span>-->
+    .form-style-8 h2 {
+        background: #4D4D4D;
+        text-transform: uppercase;
+        font-family: 'Open Sans Condensed', sans-serif;
+        color: #797979;
+        font-size: 18px;
+        font-weight: 100;
+        padding: 20px;
+        margin: -30px -30px 30px -30px;
+    }
+
+    .form-style-8 input[type="text"],
+    .form-style-8 input[type="date"],
+    .form-style-8 input[type="datetime"],
+    .form-style-8 input[type="email"],
+    .form-style-8 input[type="number"],
+    .form-style-8 input[type="search"],
+    .form-style-8 input[type="time"],
+    .form-style-8 input[type="url"],
+    .form-style-8 input[type="password"],
+    .form-style-8 textarea,
+    .form-style-8 select {
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        outline: none;
+        display: block;
+        width: 100%;
+        padding: 7px;
+        border: none;
+        border-bottom: 1px solid #ddd;
+        background: transparent;
+        margin-bottom: 10px;
+        font: 16px Arial, Helvetica, sans-serif;
+        height: 45px;
+    }
+
+    .form-style-8 textarea {
+        resize: none;
+        overflow: hidden;
+    }
+
+    .form-style-8 input[type="button"],
+    .form-style-8 input[type="submit"] {
+        -moz-box-shadow: inset 3px 1px 2px 1px #45D6D6;
+        -webkit-box-shadow: inset 1px 1px 1px 1px #45D6D6;
+        box-shadow: inset 1px 1px 1px 1px #45D6D6;
+        background-color: #2CBBBB;
+        border: 1px solid #27A0A0;
+        display: inline-block;
+        cursor: pointer;
+        color: #FFFFFF;
+        font-family: 'Open Sans Condensed', sans-serif;
+        font-size: 14px;
+        padding: 8px 18px;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
+
+    .form-style-8 input[type="button"]:hover,
+    .form-style-8 input[type="submit"]:hover {
+        background: #34CACA linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
+    }
+</style>
+<body>
+<div class="form-style-8">
+    <h2 style="color: #2e3cfb">Create task</h2>
+    <div>
+        <div>
+            <form th:action="@{/task/create/{id}/(id=${columnId})}" enctype="multipart/form-data" th:method="post" th:object="${dto}">
+
+                <div>
+                    <label>
+                        <input type="text" id="name" name="name"  placeholder="Name"/>
+                    </label>
                 </div>
 
-                <div class="form-group">
-                    <label for="deadline">Deadline</label>
-                    <input class="form-control form-control-lg" type="date" id="deadline" name="deadline" required="">
+                <div>
+                    <label>
+                        <input type="text" id="description" name="description" placeholder="Description"/>
+                    </label>
                 </div>
 
-                <div class="form-group">
-                    <label for="projectId" class="form-label">ProjectId</label>
-                    <input class="form-control" type="text" id="projectId" name="projectId" /> <!--th:field="*{project}"-->
-<!--                    <span style="color: red" th:errors="*{project}"></span>-->
+
+                <div>
+                    <label>
+                        <input type="date" id="deadline" name="deadline" required="" placeholder="Deadline">
+                    </label>
                 </div>
-                <div class="form-group">
-                    <label for="columnId" class="form-label">Column</label>
-                    <input class="form-control" type="text" id="columnId" name="columnId" /> <!--th:field="*{column}"-->
-<!--                    <span style="color: red" th:errors="*{column}"></span>-->
+
+                <div>
+                <label>
+                    <select  id="level" name="level">
+                        <option name="role_name" value="3">HARD</option>
+                        <option name="role_name" value="2">MIDDLE</option>
+                        <option name="role_name" value="1">EASY</option>
+                    </select>
+                </label>
                 </div>
-                <div class="form-group">
-                    <label for="level" class="form-label">Level</label>
-                    <input class="form-control" type="text" id="level" name="level" /> <!--th:field="*{level}"-->
-<!--                    <span style="color: red" th:errors="*{level}"></span>-->
+
+                <div>
+                <label>
+                    <input type="file" id="tz_path" name="tz_path" />
+                </label>
                 </div>
-                <div class="form-group">
-                    <input class="form-control" type="submit" value="save"/>
+
+                <div style="color: #2e3cfb; text-align: center">
+                <label>
+                    <br>
+                    <input type="submit" value="save"/>
+                    <br>
+                </label>
                 </div>
+
             </form>
         </div>
     </div>
 </div>
 
-<section th:include="fragment.html :: js-files"></section>
+<script type="text/javascript">
+    function adjust_textarea(h) {
+        h.style.height = "20px";
+        h.style.height = (h.scrollHeight) + "px";
+    }
+</script>
 </body>
 </html>
