--- a/src/main/resources/templates/task/list.html
+++ b/src/main/resources/templates/task/list.html
@@ -1,43 +1,133 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="fragment.html :: header('Home Page')"></head>
+<!doctype html>
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 
-
-<head th:fragment="header(name)">
+<head>
     <meta charset="UTF-8">
-    <title th:text="${name}"></title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+            name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <title>Task List</title>
+
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&family=Red+Hat+Display&family=Rubik:wght@400;500;600;700&display=swap"
+          rel="stylesheet">
 </head>
 
-<body class="myb">
+<style>
+    #customers {
+        font-family: Arial, Helvetica, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+        margin-left: 30px;
+    }
 
-<div class="container">
-    <div class="row">
-        <table class="table">
-            <thead>
-            <tr>
-                <th>#</th>
-                <th>Name</th>
-                <th>Description</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="task,iter : ${tasks}">
-                <td th:text="${iter.count}"></td>
-                <td th:text="${task.getName()}"></td>
-                <td th:text=" ${task.getDescription()}"></td>
-            </tr>
-            </tbody>
-        </table>
-        <a th:href="@{/task/create}" class="btn btn-success">➕ Add</a>
-    </div>
-</div>
+    #customers td, #customers th {
+        border: 1px solid #ddd;
+        padding: 8px;
+    }
 
-<section th:include="fragment.html :: js-files"></section>
+    #customers tr:nth-child(even) {
+        background-color: #f2f2f2;
+    }
+
+    #customers tr:hover {
+        background-color: #ddd;
+    }
+
+    #customers th {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: left;
+        background-color: #04AA6D;
+        color: white;
+    }
+</style>
+
+<body class="container">
+
+<header>
+
+    <main id="index-main-page">
+
+        <div class="logo">
+            <img src="https://github.com/qodirovsaidjalol/group-one/blob/8529d96f2194c415f51de795df68064c97a579f1/src/main/resources/static/imges/logo.png"
+                 width="166" th:src="@{/imges/logo.png}" alt="not"/>
+        </div>
+        <div class="link">
+            <br>
+            <a th:href="@{/project/list}">Projects</a>
+            <a th:href="@{/auth/logout}">Logout</a>
+        </div>
+    </main>
+
+    <aside>
+        <nav id="index-nav">
+            <div class="input">
+                <div>
+                    <i class="fas fa-search"></i>
+                </div>
+
+                <label>
+                    <input type="text" placeholder="Search">
+                </label>
+
+            </div>
+
+        </nav>
+
+        <br><br>
+        <div>
+            <table id="customers" class="table table-striped table-bordered">
+                <tr>
+                    <th>#</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Task</th>
+                    <th>Action</th>
+
+
+
+                </tr>
+                <tr th:if="${#lists.isEmpty(tasks)}">
+                    <td class="text-center" colspan="7">No Records found. Add some...!</td>
+                </tr>
+                <tr th:each="task, iter : ${tasks}">
+                    <td class="align-middle" th:text="${iter.count}"></td>
+                    <td class="align-middle" th:text="${task.name}"></td>
+                    <td class="align-middle" th:text="${task.description}"></td>
+                    <td class="align-middle" th:href="${task.getTz_path()}"></td>
+
+                    <td class="align-middle text-center">
+                        <a class="btn btn-secondary" th:href="'/task/update/' + ${task.id}">✏️</a>
+                        <a class="btn btn-secondary" th:if="${task.isBlocked()}"
+                           th:href="'/task/block/' + ${task.id}">🔓</a>
+                        <a class="btn btn-secondary" th:if="${!task.isBlocked()}"
+                           th:href="'/task/block/' + ${task.id}">🔐</a>
+                        <a class="btn btn-secondary" th:href="'/task/delete/' + ${task.id}">🗑</a>
+                    </td>
+                </tr>
+            </table>
+            <br>
+            <h3>
+                <a style="padding: 20px" th:href="@{/task/create/{id}/(id=${columnId})}" class="btn btn-success">➕ Create Task</a>
+            </h3>
+        </div>
+    </aside>
+
+</header>
+
+<script>
+    const menu = document.querySelector(".menu-bar")
+    const main = document.querySelector("main")
+    menu.addEventListener("click", () => {
+        main.classList.toggle("open")
+    })
+</script>
+
 </body>
+
 </html>
-
-
-
