--- a/src/main/resources/templates/organization/edit.html
+++ b/src/main/resources/templates/organization/edit.html
@@ -17,13 +17,19 @@
 <body class="container">
 
 <form class="col card p-3 my-5" enctype="multipart/form-data" method="post"
-      th:action="'/auth/update/'+${organization.id}"
+      th:action="'/organization/update/'+${organization.id}"
       th:object="${organization}">
 
     <div class="form-group">
         <label for="firstName"> Name</label>
         <input class="form-control" id="firstName" placeholder="Enter First Name" required
                th:field="*{name}"
+               type="text"/>
+    </div>
+    <div class="form-group">
+        <label for="code"> Code</label>
+        <input class="form-control" id="code" placeholder="Enter First Name" required
+               th:field="*{code}"
                type="text"/>
     </div>
 
